test/libsolidity/syntaxTests/operators/custom/bind_revert_function.sol
type Int is int16;

using {revert as +} for Int;

// ----
// DeclarationError 7920: (27-33): Identifier not found or not unique.
